# ohana-ai

./: .ai-coder.conf  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  SessionNext.md  alembic.ini  pyproject.toml
.claude/: adp-operating-prompt.md  launch.json  settings.json
.claude/agents/: output-evaluator.md
.claude/hooks/: adp-lib.sh  checkpoint-on-compact.sh  decision-gate.sh  gate-verdict.sh  guardrail.py  mcp-config-integrity.sh  output-secrets-scanner.sh  post-edit-checker.sh  pre-bash-guard.sh  pre-commit-hygiene.sh  pre-edit-guard.sh  progress-guard.sh  scope-drift-counter.sh  session-end-update.sh  session-start-context.sh  staleness-detector.sh  stop-gate.sh  stop-reminder.sh
.claude/tests/: lib.sh  run-spine.sh  run.sh
.claude/tools/: adp-bootstrap.sh  adp-checkpoint.sh  adp-dashboard.sh  adp-decide.sh  adp-profile-gen.sh  adp-review.sh  adp-roadmap.sh  adp-shadow-report.sh  adp-smoke.sh  adp-status.sh
.github/workflows/: ci.yml
agent/: debounce_scheduler.py  drafter.py  embedder.py  inbound_worker.py  llm_client.py  orchestrator.py  persona.py  pii.py  pii_client.py  policy_gate.py
agent/providers/: __init__.py  openai_client.py  openai_embedder.py  together_client.py  together_embedder.py
api/: __init__.py  admin.py  chat.py  inbox.py  mock_auth.py  webhook.py
app/: alert_service.py  config.py  main.py
auth/: __init__.py  identity.py
bridge/: __init__.py  ohana_client.py  zalo_sender.py
channels/: __init__.py  base.py  identity.py
channels/zalo/: __init__.py  signature.py
db/: __init__.py  models.py  repos.py  session.py  shop_repo.py
db/migrations/: env.py
docs/: .adp-project-profile.json  .adp-red-proof.json  .adp-state-hash  ROADMAP-STATUS.md  ROADMAP.md  Roadmap.md  backend-workflow.md  codebase-map.md
docs/adr/: 2026-07-18-hosting-region.md  2026-07-22-derivation-pipeline.md  ADR-adp-dual-trust-root.md  ADR-adp-v2.md  hook-contract.md
docs/briefs/: brief-08-E0-together-embedder.md  brief-10-ohana-persona-architecture.md
docs/decisions/: DEC-OHANA-01-web-framework.md  DEC-OHANA-02-chat-model-selection.md  DEC-OHANA-03-roadmap-adp-spine.md  DEC-OHANA-04-evidence-waiver-pre-ci-green.md  DEC-OHANA-06-kill-tick-syntax-in-gates.md  DEC-OHANA-07-review-queue-retire.md
docs/gates/: GD0-STEP1.md  GD0-STEP2.md  GD0-STEP3.md  GD0-STEP4.md  GD0-STEP5.md  GD0-STEP6.md  GD0-STEP7.md  GD0-STEP8.md  GD0-STEP9.md  README.md
docs/memory/: DECISIONS.md  KNOWN_ISSUES.md  PHASE1_DISCOVERY.md  REVIEW_QUEUE.md  SESSION_LOG.md  SHIPPED-SURFACE.md
docs/reviews/: 01-Task-OhanaAISeller-GD0-phase-1.json  01-Task-OhanaAISeller-GD0-phase-2-human.md  01-Task-OhanaAISeller-GD0-phase-2.json  01-Task-OhanaAISeller-GD0-phase-3.json  01-Task-OhanaAISeller-GD0-phase-4.json  01-Task-OhanaAISeller-GD0-phase-5-human.md  01-Task-OhanaAISeller-GD0-phase-5.json  02-Task-Phase1-Bootstrap-Fork-DrNickV4-phase-1.1.json  02-Task-Phase1-Bootstrap-Fork-DrNickV4-phase-1.2.json  02-Task-Phase1-Bootstrap-Fork-DrNickV4-phase-1.3.json  04-Task-OhanaAISeller-GD0_5-InboxUI-phase-P0.json  04-Task-OhanaAISeller-GD0_5-InboxUI-phase-P1.json  04-Task-OhanaAISeller-GD0_5-InboxUI-phase-P2.json  05-Task-OhanaAISeller-ConfigEmbedder-F1-phase-P0.json  05-Task-OhanaAISeller-ConfigEmbedder-F1-phase-P1.json  05-Task-OhanaAISeller-ConfigEmbedder-F1-phase-P2.json  06-F0-auto-verdict.json  06-F0-human-review.md  06-F1-auto-verdict.json  06-F2-auto-verdict.json  08-E0-auto-verdict.json  08-E0-gate-reverify.md  08-E1-auto-verdict.json  08-E1-human.md  08-E2-auto-verdict.json  09-C0-auto-verdict.json  10-H0-auto-verdict.json  10-H1-auto-verdict.json  10-H2-auto-verdict.json  11-S0-auto-verdict.json  11-S1-auto-verdict.json  11-S1-human.md  11-S2-auto-verdict.json  11-S3-auto-verdict.json  12-W0-auto-verdict.json  13-D0-auto-verdict.json  13-D0-human.md  13-D1-auto-verdict.json  13-D1-human.md  14-A0-auto-verdict.json  (+12 more)
docs/smokes/: 08-E0.md  08-E1.md  08-E2.md  09-C0.md  10-H0.md  10-H1.md  10-H2.md  11-S0.md  11-S1.md  11-S2.md  13-D0.md  13-D1.md  16-B0.md  16-C0.md  README.md
docs/tasks/: 01-Task-OhanaAISeller-GD0.md  02-Task-Phase1-Bootstrap-Fork-DrNickV4.md  03-Task-GD0-AcceptanceBackfill.md  04-Task-OhanaAISeller-GD0_5-InboxUI.md  05-Task-OhanaAISeller-ConfigEmbedder-F1.md  06-Task-OhanaAISeller-Foundation.md  07-Task-OhanaAISeller-GeneralChat.md  08-Task-OhanaAISeller-EmbedderSwap-E5.md  09-Task-OhanaAISeller-ConversationRace.md  10-Task-OhanaAISeller-ConversationHistory.md  11-Task-OhanaAISeller-ShopsPersona.md  12-Task-OhanaAISeller-429TelemetryWiring.md  13-Task-OhanaAISeller-Drafter.md  14-Task-OhanaAISeller-DraftSchema-Idempotency.md  15-Task-OhanaAISeller-RuntimeWiring.md  16-Task-OhanaAISeller-PIIFilter.md  17-Task-OhanaAISeller-ZaloWire.md  PLAN-PhaseTargets-GD0toGD3.md  PLAN-TechLead-Decomposition-Roadmap.md
parsing/: __init__.py  chunk.py  extract.py  ingest.py
retrieval/: __init__.py  base.py  pgvector.py
scripts/: roadmap_dashboard.py  roadmap_dashboard.tpl.html  roadmap_derive.py
scripts/ai_coder/: README.md  gen_codebase_map.py  (+1 more)
storage/: __init__.py  base.py  local.py
tests/: conftest.py  test_admin_ui.py  test_alert_service.py  test_channel_abstraction.py  test_chat_endpoint.py  test_chat_ui.py  test_config.py  test_conversation_race.py  test_draft_schema_idempotency.py  test_drafter.py  test_drafter_live.py  test_drafter_tools.py  test_embedder_wiring.py  test_embedding_dim.py  test_foundation_models.py  test_history_cap_tokens.py  test_inbox_ui_e2e.py  test_llm_429_wiring.py  test_message_history.py  test_ohana_tools.py  test_orchestrator.py  test_pii_filter.py  test_policy_gate.py  test_ports.py  test_runtime_wiring.py  test_shops_persona.py  test_smoke.py  test_tenant_isolation.py  test_together_client.py  test_together_embedder.py  test_together_live.py  test_web_scaffold.py  test_webhook_signature.py  test_wiki_rag.py  test_wiki_rag_live.py  test_zalo_signature.py  test_zalo_token_repo.py
tools/: __init__.py  ohana_read.py  registry.py  shop_kb.py  wiki.py
web/: .gitignore  index.html  package.json  pnpm-lock.yaml  vite.config.ts
(+31 files in other folders)
