[project]
name = "ohana-ai"
version = "0.1.0"
description = "AI copilot cho seller social-commerce VN (Zalo/FB/IG) — MVP Zalo-only."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "sse-starlette>=2.1",
    "python-multipart>=0.0.9",
    "pypdf>=4.0",
    "defusedxml>=0.7",
    "openai>=1.30",
    "httpx>=0.27",
    "pyjwt[crypto]>=2.8",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "psycopg[binary]>=3.1",
    "pgvector>=0.2.5",
    "redis>=5.0",
]

[project.optional-dependencies]
dev = [
    # PIN CỨNG, không phải `>=` — ruff vừa là linter vừa là GATE của ADP.
    #
    # Với `ruff>=0.4`, `ruff check .` là hàm của NGÀY CÀI ĐẶT chứ không phải của source: một
    # bản ruff mới bật thêm rule ⇒ CI đỏ mà không ai đổi dòng code nào. Đã xảy ra thật —
    # S603 land cùng spec 07 và đỏ dần theo bản ruff mới (ISSUE-019). Hệ quả nặng hơn CI đỏ:
    # phase từng checkpoint DONE với GATE_FULL chứa `ruff check .` sẽ KHÔNG tái lập được kết
    # quả cũ, tức EVIDENCE mất tính kiểm chứng — mà EVIDENCE tái lập được chính là thứ ADP
    # bán. Nâng ruff từ nay là một commit CÓ CHỦ ĐÍCH, đọc changelog, sửa cái nó bắt.
    "ruff==0.15.22",
    "mypy>=1.10",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "S"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]
"api/**" = ["B008"]
"auth/**" = ["B008"]

[tool.mypy]
python_version = "3.11"
strict = true

[[tool.mypy.overrides]]
module = ["pypdf.*", "defusedxml.*", "pgvector.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "-q -m 'not live'"
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "live: real-net LLM smoke — nondeterministic; excluded from default gate (run with: pytest -m live)",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app"]
